tests/baselines/reference/genericFunduleInModule2.errors.txt
tests/cases/compiler/genericFunduleInModule2.ts(11,10): error TS2694: Namespace 'A' has no exported member 'B'.


==== tests/cases/compiler/genericFunduleInModule2.ts (1 errors) ====
    module A {
        export function B<T>(x: T) { return x; }
    }
    
    module A {
        export module B {
            export var x = 1;
        }
    }
    
    var b: A.B;
             ~
!!! error TS2694: Namespace 'A' has no exported member 'B'.
    A.B(1);